--- a/Task2_Code_Barton_R/Task2_Code_Barton_R.html
+++ b/Task2_Code_Barton_R/Task2_Code_Barton_R.html
@@ -14,7 +14,11 @@
         </div>
         <div class="weather">
             <h2 class="city">Weather in Norwich</h2>
-            <div class="temp">15°</div>
+            <div class="temp">15°C</div>
+            <img src="" alt="" class="icon" />
+            <div class="description">Cloudy</div>
+            <div class="humidity">Humidity: 80%</div>
+            <div class="wind">wind speed: 10mph</div>
         </div>
     </div>
 </body>
