--- a/Task2_Code_Barton_R/Task2_Code_Barton_R.html
+++ b/Task2_Code_Barton_R/Task2_Code_Barton_R.html
@@ -2,8 +2,13 @@
 <html lang ="en">
 <head>
 <title>weather and health</title>
-    <h1>Weather and Health</h1>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel ="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
+
 <body>
     <div class="card">
         <div class="search">
@@ -14,7 +19,7 @@
         </div>
         <div class="weather">
             <h2 class="city">Weather in Norwich</h2>
-            <div class="temp">15°C</div>
+            <h1 class="temp">15°C</h1>
             <img src="" alt="" class="icon" />
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 80%</div>
