--- a/Task2_Code_Barton_R/Task2_Code_Barton_R.html
+++ b/Task2_Code_Barton_R/Task2_Code_Barton_R.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" class ="search-bar">
+            <input type="text" class ="search-bar" placeholder="Search">
             <button>
                 search
             </button>
