--- a/Task2_Code_Barton_R/Task2_Code_Barton_R.html
+++ b/Task2_Code_Barton_R/Task2_Code_Barton_R.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel ="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -17,11 +17,13 @@
                 search
             </button>
         </div>
-        <div class="weather">
+        <div class="weather loading">
             <h2 class="city">Weather in Norwich</h2>
             <h1 class="temp">15°C</h1>
-            <img src="" alt="" class="icon" />
-            <div class="description">Cloudy</div>
+            <div class="flex">
+                <img src="https://openweathermap.org/img/wn/03n.png" alt="" class="icon" />
+                <div class="description">Cloudy</div>
+            </div>
             <div class="humidity">Humidity: 80%</div>
             <div class="wind">wind speed: 10mph</div>
         </div>
