Can now use location for weather
Need to make it so the background, wind speed and humidity are updated when using current location for weather

--- a/Task2_Code_Barton_R/Task2_Code_Barton_R.html
+++ b/Task2_Code_Barton_R/Task2_Code_Barton_R.html
@@ -18,14 +18,14 @@
             </button>
         </div>
         <div class="weather loading">
-            <h2 class="city">Weather in Norwich</h2>
-            <h1 class="temp">15°C</h1>
+            <h2 class="city" id="location">Weather in Norwich</h2>
+            <h1 class="temp" id="temperature">15°C</h1>
             <div class="flex">
                 <img src="https://openweathermap.org/img/wn/03n.png" alt="" class="icon" />
-                <div class="description">Cloudy</div>
+                <div class="description" id="description">Cloudy</div>
             </div>
-            <div class="humidity">Humidity: 80%</div>
-            <div class="wind">wind speed: 10mph</div>
+            <div class="humidity" id="humidity">Humidity: 80%</div>
+            <div class="wind" id="wind">wind speed: 10mph</div>
         </div>
     </div>
 </body>
